# entraos-metasys-crawler-cli

./: .bumpversion.cfg  .gitignore  .pylintrc  LICENSE  README.md  pyproject.toml
.github/workflows/: codeql-analysis.yml
migrations/: README  env.py
migrations/versions/: 04d56b17edad_drop_response.py  41060afbd5db_add_last_sync_column.py  60a4bfee242f_remove_network_devices.py  b19f759c4c36_add_network_devices.py  d99173be2f79_initial_database_creation.py  dfa4b3c04a8c_add_enumsets.py
src/crawler/: buildingmap.py  classify.py  crawler.py  setup.py
src/crawler/auth/: entrasso.py  metasysbearer.py
src/crawler/db/: base.py  models.py
src/crawler/metadata/: buildingmap.py
src/crawler/metasysauth/: bearer.py
src/crawler/model/: bas.py
src/tests/: test_crawler.py
tests/: conftest.py  test_bearer.py  test_crawler.py  test_entrasso.py  test_metasys_bearer.py
tests/data/: enumsets.0.json  object.0.json  objects.page.1.json  objects.page.2.json
