[tool.poetry]
name = "crawler"
version = "0.2.1"
description = "API Crawler for Metasys"
authors = ["Per Buer <per.buer@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/entraeiendom/entraos-metasys-crawler-cli"


[tool.poetry.dependencies]
python = "^3.6"
click = "^8.0.0"
requests = "^2.24.0"
sqlalchemy = "^1.3.20"
python-dateutil = "^2.8.1"
alembic = "^1.4.3"

[tool.poetry.dev-dependencies]
python-dotenv = "^0.14.0"
pylint = "^2.6.0"
pytest = "^6.1.1"
requests-mock = "^1.8.0"
pytest-cov = "^2.10.1"
pytest-mock = "^3.3.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
crawler = "crawler.crawler:cli"
